Fix albums list overflow

--- a/src/app/albums/components/albums-list/albums-list.component.scss
+++ b/src/app/albums/components/albums-list/albums-list.component.scss
@@ -7,7 +7,7 @@
 
   &__container {
     display: flex;
-    overflow-y: hidden;
+    overflow: hidden;
   }
 
   &__heading {
